# NutrientTracker

./: .gitignore  Cargo.toml  notes.md  sourceme.sh
app/: Cargo.toml
app/src/: api.rs  main.rs  snapshot.rs  util.rs
app/src/api/: login.rs  mod.rs
entity/: Cargo.toml
entity/src/entities/: composite_consumable.rs  composite_consumable_nutrients.rs  consumable.rs  consumption_record.rs  date.rs  mod.rs  nutrient_targets.rs  nutrients.rs  prelude.rs  sessions.rs  time.rs  units.rs  user_accounts.rs  users.rs
frontend/: index.html
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
scripts/: Dockerfile  pre-commit-config.yaml  run_postgres.sh  start_rust_env.sh
src/: api.rs  types.rs
