[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = "1.4.8"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
axum = "0.5.11"
serde = "1.0.138"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tower = "0.4.12"
tower-service = "0.3.2"
tower-http = { version = "0.3.3", features = ["fs"] }
entity = { path = "../entity"}
chrono = "0.4.19"
itertools = "0.10.3"
# reads .env file in base dir
# dotenv = "0.15.0"

# html templating library
# tera = "1.16.0"
